Missing crucial processing step

--- a/ryc_TRxTR_SRM_090721.ipynb
+++ b/ryc_TRxTR_SRM_090721.ipynb
@@ -43,7 +43,7 @@
         "from brainiak.funcalign.srm import SRM\n",
         "from brainiak.isc import isc"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -65,7 +65,7 @@
         "filepath = 'drive/MyDrive/fMRI_music_data/%s_by_subject/'%roi\n",
         "subjects = ['03','15','20','23']"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -135,7 +135,7 @@
         "data = np.asarray(data)\n",
         "print(data.shape)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -179,7 +179,7 @@
         "data = data[:,:,:12,6:]\n",
         "print('final data shape: ', data.shape)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -198,6 +198,15 @@
       },
       "source": [
         "For this analysis, we're interested in event segmentation in run 1 of the 8B condition. Since subjects played the conditions in a counterbalanced order, the run of interest is in a different location in each subject's data. Which run is 8B run 1 is recorded in the 'loc' variable."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Ujf4un1gbK5U"
+      },
+      "source": [
+        "A data processing step is missing here - the conditions are not all in the same order across subjects."
       ]
     },
     {
@@ -233,7 +242,7 @@
         "  # append the rest of the data to train_data\n",
         "  train_data.append(this_data)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -254,7 +263,7 @@
         "print(train_data.shape)\n",
         "print(test_data.shape)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -368,7 +377,7 @@
       "source": [
         "train_data = np.reshape(train_data,(train_data.shape[0],train_data.shape[1],-1))"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -383,7 +392,7 @@
       "source": [
         "print(train_data.shape)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -405,7 +414,7 @@
         "  train_data[s] = stats.zscore(train_data[s],axis=1)\n",
         "  test_data[s] = stats.zscore(test_data[s],axis=1)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -544,7 +553,7 @@
       "source": [
         "print(test_data.shape)"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -569,7 +578,7 @@
         "test_data = np.transpose(test_data,axes=[2,1,0])\n",
         "print(test_data.shape)"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -597,7 +606,7 @@
         "isc_by_voxel = np.average(test_isc,axis=0)\n",
         "print(isc_by_voxel.shape)"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -848,7 +857,7 @@
         "# define number of voxels\n",
         "n_voxels = test_data.shape[1]"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -872,7 +881,7 @@
         "k = [10,20,50,100,250]\n",
         "print(type(k))"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -923,7 +932,7 @@
         "  # compute the mean ISC value\n",
         "  isc_means.append(np.average(isc_by_feat))"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -954,7 +963,7 @@
         "ax.scatter(n_voxels,np.average(isc_by_voxel),color='black')\n",
         "ax.hlines(np.average(isc_by_voxel),0,n_voxels,alpha=0.5);"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -983,7 +992,7 @@
         "k = np.arange(50,550,50).tolist()\n",
         "print(k)"
       ],
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1034,7 +1043,7 @@
         "  # compute the mean ISC value\n",
         "  isc_means.append(np.average(isc_by_feat))"
       ],
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1072,7 +1081,7 @@
         "ax.set_xlabel('number of features')\n",
         "ax.set_ylabel('mean ISC');"
       ],
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1096,7 +1105,7 @@
       "source": [
         "isc_means_by50s = isc_means"
       ],
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1112,7 +1121,7 @@
         "k = np.arange(10,100,10)\n",
         "print(k)"
       ],
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1163,7 +1172,7 @@
         "  # compute the mean ISC value\n",
         "  isc_means_by10s.append(np.average(isc_by_feat))"
       ],
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1195,7 +1204,7 @@
         "k_combined = np.hstack((np.arange(10,100,10),np.arange(100,550,50)))\n",
         "print(k_combined)"
       ],
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1219,7 +1228,7 @@
         "isc_means_all = isc_means_by10s + isc_means_by50s[1:] # 50 is redundant\n",
         "print(len(isc_means_all))"
       ],
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1248,7 +1257,7 @@
         "ax.set_xlabel('number of features')\n",
         "ax.set_ylabel('mean ISC');"
       ],
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
