Run with real A1 data

--- a/ryc_correlation_classifier_092521.ipynb
+++ b/ryc_correlation_classifier_092521.ipynb
@@ -57,7 +57,7 @@
         "\n",
         "  for s in range(no_subj):\n",
         "\n",
-        "    print('subject %d'%s)\n",
+        "    #print('subject %d'%s)\n",
         "\n",
         "    # grab the data for this loop\n",
         "    this_sub = data[s,:,:,:]\n",
@@ -78,16 +78,16 @@
         "\n",
         "        corr_vals[j] = np.corrcoef(this_flat,avg_flat)[0,1]\n",
         "\n",
-        "      print('accuracy for cond %d'%i)\n",
-        "      print(corr_vals)\n",
-        "      print(i == np.argmax(corr_vals))\n",
+        "      #print('accuracy for cond %d'%i)\n",
+        "      #print(corr_vals)\n",
+        "      #print(i == np.argmax(corr_vals))\n",
         "\n",
         "      # if the largest correlation is to the same condition, \n",
         "      # the prediction was correct\n",
         "      accuracy[i,s] = i == np.argmax(corr_vals)\n",
         "  \n",
-        "  print()\n",
-        "  print(accuracy)\n",
+        "  #print()\n",
+        "  #print(accuracy)\n",
         "\n",
         "\n",
         "  # return accuracy as a proportion correct across subjects\n",
@@ -99,11 +99,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "nK0Mi6S9GKCI",
-        "outputId": "2e18f5d1-1921-421d-9011-7e2c2ef02adf"
+        "id": "nK0Mi6S9GKCI"
       },
       "source": [
         "# create array of random values to test\n",
@@ -113,72 +109,16 @@
         "acc = correlation_classifier(data_rand)\n",
         "print(acc)"
       ],
-      "execution_count": 68,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "subject 0\n",
-            "accuracy for cond 0\n",
-            "[-0.01185655  0.00244012 -0.0157324  -0.00254487]\n",
-            "False\n",
-            "accuracy for cond 1\n",
-            "[-0.00863629 -0.0116023  -0.01357055 -0.01293949]\n",
-            "False\n",
-            "accuracy for cond 2\n",
-            "[ 0.00439957 -0.01361287 -0.00175364  0.00118101]\n",
-            "False\n",
-            "accuracy for cond 3\n",
-            "[-0.00939954  0.00223494  0.00185115  0.01345503]\n",
-            "True\n",
-            "subject 1\n",
-            "accuracy for cond 0\n",
-            "[-0.00537656 -0.00201241 -0.00045791  0.00277699]\n",
-            "False\n",
-            "accuracy for cond 1\n",
-            "[ 0.00741137 -0.02542215 -0.00297121 -0.00612889]\n",
-            "False\n",
-            "accuracy for cond 2\n",
-            "[-0.01048997 -0.00443106 -0.00180998 -0.01504596]\n",
-            "True\n",
-            "accuracy for cond 3\n",
-            "[ 0.0043099  -0.0124473  -0.00153363 -0.00271346]\n",
-            "False\n",
-            "subject 2\n",
-            "accuracy for cond 0\n",
-            "[-0.01613284  0.00062212 -0.00726577 -0.00384666]\n",
-            "False\n",
-            "accuracy for cond 1\n",
-            "[ 0.00040122 -0.00901823 -0.00553041  0.00282104]\n",
-            "False\n",
-            "accuracy for cond 2\n",
-            "[-0.00861678 -0.0176909   0.00479066  0.00990832]\n",
-            "False\n",
-            "accuracy for cond 3\n",
-            "[-0.00604576 -0.01102295  0.00033797 -0.00035788]\n",
-            "False\n",
-            "subject 3\n",
-            "accuracy for cond 0\n",
-            "[-0.00878749  0.00368313  0.00754743 -0.00839693]\n",
-            "False\n",
-            "accuracy for cond 1\n",
-            "[ 0.00550848 -0.02094935 -0.01243732 -0.00790688]\n",
-            "False\n",
-            "accuracy for cond 2\n",
-            "[-0.0013431   0.00075001  0.00078115  0.00209429]\n",
-            "False\n",
-            "accuracy for cond 3\n",
-            "[-0.00098748 -0.00306119 -0.00253304  0.00740176]\n",
-            "True\n",
-            "\n",
-            "[[False False False False]\n",
-            " [False False False False]\n",
-            " [False  True False False]\n",
-            " [ True False False  True]]\n",
-            "[0.   0.   0.25 0.5 ]\n"
-          ]
-        }
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "QYy-LBBfYBZW"
+      },
+      "source": [
+        "Now that it's working, let's load the real data from A1. (The following code was borrowed from `ryc_TRxTR-SRM_091321.ipynb`.)"
       ]
     },
     {
@@ -187,10 +127,218 @@
         "id": "YxP1gOctXVYM"
       },
       "source": [
-        ""
+        "roi = 'A1'\n",
+        "filepath = 'drive/MyDrive/fMRI_music_data/%s_by_subject_sorted_conds/'%roi\n",
+        "subjects = ['03','15','20','23']"
       ],
-      "execution_count": null,
+      "execution_count": 71,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8DiiikmEZVc9",
+        "outputId": "c3ce0344-9e20-4e87-f25c-2a7c5f4de630"
+      },
+      "source": [
+        "# load in the data from all subjects\n",
+        "data = []\n",
+        "for subj in subjects: \n",
+        "  data.append(np.load(filepath+'%s_sub-1%s.npy'%(roi,subj)))\n",
+        "\n",
+        "# recast the list into an array and check the shape\n",
+        "data = np.asarray(data)\n",
+        "print(data.shape)"
+      ],
+      "execution_count": 72,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(4, 516, 1776)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ID6hoQdCZdk6"
+      },
+      "source": [
+        "Right now, this is all of the data from all of the reps. For this analysis, I will take only the data from rep 1."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "854p0ljXZXD0",
+        "outputId": "dcd480ed-be60-464a-d14b-48bb2d5ae928"
+      },
+      "source": [
+        "n_sub = len(subjects)\n",
+        "n_voxels = data.shape[1]\n",
+        "n_TRs = 148\n",
+        "n_conds = 4\n",
+        "n_runs = 3\n",
+        "\n",
+        "orig_data = np.copy(data)\n",
+        "orig_data = np.reshape(orig_data,(n_sub,n_voxels,n_TRs,n_conds,n_runs),order='F')\n",
+        "print(orig_data.shape)"
+      ],
+      "execution_count": 74,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(4, 516, 148, 4, 3)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "38OifOXxZuZY",
+        "outputId": "7a78ff7b-bfaf-4922-d412-244bbf89f6ae"
+      },
+      "source": [
+        "rep1_data = orig_data[:,:,:,:,0]\n",
+        "print(rep1_data.shape)"
+      ],
+      "execution_count": 75,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(4, 516, 148, 4)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kK_JgB5rZ6Bm",
+        "outputId": "3a7bed64-9657-4a2f-aa2d-dd6a196356b3"
+      },
+      "source": [
+        "# run the rep 1 data through the classifier\n",
+        "true_acc = correlation_classifier(rep1_data)"
+      ],
+      "execution_count": 76,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "subject 0\n",
+            "accuracy for cond 0\n",
+            "[0.02197606 0.01385221 0.02251754 0.01839836]\n",
+            "False\n",
+            "accuracy for cond 1\n",
+            "[0.00772357 0.0294541  0.02375911 0.01051152]\n",
+            "True\n",
+            "accuracy for cond 2\n",
+            "[0.04739856 0.01224783 0.02841029 0.02034555]\n",
+            "False\n",
+            "accuracy for cond 3\n",
+            "[0.01153964 0.00089649 0.00539758 0.02192166]\n",
+            "True\n",
+            "subject 1\n",
+            "accuracy for cond 0\n",
+            "[0.02766756 0.00578623 0.04525585 0.0109404 ]\n",
+            "False\n",
+            "accuracy for cond 1\n",
+            "[ 0.00807048  0.04345539  0.02055492 -0.00563804]\n",
+            "True\n",
+            "accuracy for cond 2\n",
+            "[0.03514422 0.01475202 0.01689835 0.00266933]\n",
+            "False\n",
+            "accuracy for cond 3\n",
+            "[ 0.01608528 -0.02597819 -0.00084698  0.00626816]\n",
+            "False\n",
+            "subject 2\n",
+            "accuracy for cond 0\n",
+            "[0.02654595 0.00860034 0.03373211 0.02190443]\n",
+            "False\n",
+            "accuracy for cond 1\n",
+            "[ 0.01562842  0.03467747  0.01207248 -0.00098585]\n",
+            "True\n",
+            "accuracy for cond 2\n",
+            "[ 0.0288729   0.03727881  0.02547191 -0.00449937]\n",
+            "False\n",
+            "accuracy for cond 3\n",
+            "[ 0.01328347 -0.00108772  0.02004571  0.02516735]\n",
+            "True\n",
+            "subject 3\n",
+            "accuracy for cond 0\n",
+            "[0.0315967  0.02207762 0.02080318 0.00114812]\n",
+            "True\n",
+            "accuracy for cond 1\n",
+            "[ 0.01804878  0.06555194  0.02319088 -0.01757776]\n",
+            "True\n",
+            "accuracy for cond 2\n",
+            "[0.00789246 0.01561667 0.02730802 0.00560036]\n",
+            "True\n",
+            "accuracy for cond 3\n",
+            "[0.01389738 0.01371646 0.00302438 0.02125392]\n",
+            "True\n",
+            "\n",
+            "[[False False False  True]\n",
+            " [ True  True  True  True]\n",
+            " [False False False  True]\n",
+            " [ True False  True  True]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "U8JHZ3RbapKt",
+        "outputId": "287a7222-3335-4036-cf9c-b3335af79e4e"
+      },
+      "source": [
+        "print(true_acc)"
+      ],
+      "execution_count": 78,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0.25 1.   0.25 0.75]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "a6vgiqcbavsQ"
+      },
+      "source": [
+        "This means that for all subjects, the 8B matrix was best correlated with the 8B matrix of average other subjects. It is interesting that 1B is the next most accurate, and Intact and 2B are the worst. We can also see (from the previous cell's output) that the classifier was accurate for all conditions with s123, but not the other subjects. Looking at previously calculated ISC values (in the temporal ISC folder from the spring, `all_ROIs_AM/values.xlsx`), s123's ISC values aren't noticeably higher than the other subjects' values in A1."
+      ]
     }
   ]
 }
