Setting up analysis, add normalization step

--- a/ryc_correlation_classifier_092521.ipynb
+++ b/ryc_correlation_classifier_092521.ipynb
@@ -5,7 +5,9 @@
     "colab": {
       "name": "ryc_correlation_classifier_092521.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [
+        "F8SiyM89zJK2"
+      ]
     },
     "kernelspec": {
       "name": "python3",
@@ -28,8 +30,19 @@
         "For each subject, the function correlates a voxel by time matrix from that subject in one condition with the VxT matrix of the other averaged subjects in all conditions. The correlation with the highest value is assigned as the prediction. If the predicted condition matches the actual condition, then the outcome is correct. This is performed for all four conditions and all subjects.\n",
         "\n",
         "\n",
-        "This implementation is a cross-subjects classifier, since that will be most useful in determining the utility of PCA and SRM. I expect that SRM with fewer features will perform the best in terms of improving cross-subject alignment. PCA will be used as a control for dimensionality reduction. I wouldn't be surprised if there's a ceiling effect with this analysis.\n"
+        "This implementation is a cross-subjects classifier, since that will be most useful in determining the utility of PCA and SRM. I expect that SRM with fewer features will perform the best in terms of prediction, indicating an improvement in cross-subject alignment. PCA will be used as a control for dimensionality reduction. I wouldn't be surprised if there's a ceiling effect with this analysis.\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "M5nBN-6jusw8"
+      },
+      "source": [
+        "!pip install brainiak"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -38,9 +51,12 @@
       },
       "source": [
         "import numpy as np\n",
-        "import matplotlib.pyplot as plt"
+        "import matplotlib.pyplot as plt\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "from sklearn.decomposition import PCA\n",
+        "from brainiak.funcalign.srm import SRM"
       ],
-      "execution_count": 1,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -50,6 +66,7 @@
       },
       "source": [
         "def correlation_classifier(data):\n",
+        "  # data is in shape subjects x voxels x time x condition\n",
         "  no_subj = data.shape[0]\n",
         "  no_cond = data.shape[3]\n",
         "\n",
@@ -93,8 +110,17 @@
         "  # return accuracy as a proportion correct across subjects\n",
         "  return np.sum(accuracy, axis=1) / no_subj"
       ],
-      "execution_count": 67,
+      "execution_count": 4,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "F8SiyM89zJK2"
+      },
+      "source": [
+        "## Testing"
+      ]
     },
     {
       "cell_type": "code",
@@ -131,7 +157,7 @@
         "filepath = 'drive/MyDrive/fMRI_music_data/%s_by_subject_sorted_conds/'%roi\n",
         "subjects = ['03','15','20','23']"
       ],
-      "execution_count": 71,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -141,7 +167,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8DiiikmEZVc9",
-        "outputId": "c3ce0344-9e20-4e87-f25c-2a7c5f4de630"
+        "outputId": "854a893c-1ada-460f-9fc4-4bee5b1cead6"
       },
       "source": [
         "# load in the data from all subjects\n",
@@ -153,7 +179,7 @@
         "data = np.asarray(data)\n",
         "print(data.shape)"
       ],
-      "execution_count": 72,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -170,7 +196,7 @@
         "id": "ID6hoQdCZdk6"
       },
       "source": [
-        "Right now, this is all of the data from all of the reps. For this analysis, I will take only the data from rep 1."
+        "Right now, this is all of the data from all of the reps. For this analysis, take only the data from rep 1."
       ]
     },
     {
@@ -180,7 +206,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "854p0ljXZXD0",
-        "outputId": "dcd480ed-be60-464a-d14b-48bb2d5ae928"
+        "outputId": "a498bacf-a744-49e9-b8d9-3c47c752c15b"
       },
       "source": [
         "n_sub = len(subjects)\n",
@@ -193,7 +219,7 @@
         "orig_data = np.reshape(orig_data,(n_sub,n_voxels,n_TRs,n_conds,n_runs),order='F')\n",
         "print(orig_data.shape)"
       ],
-      "execution_count": 74,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -211,13 +237,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "38OifOXxZuZY",
-        "outputId": "7a78ff7b-bfaf-4922-d412-244bbf89f6ae"
+        "outputId": "561af1d0-8b1b-41c4-e961-84154bddae68"
       },
       "source": [
         "rep1_data = orig_data[:,:,:,:,0]\n",
         "print(rep1_data.shape)"
       ],
-      "execution_count": 75,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -241,7 +267,7 @@
         "# run the rep 1 data through the classifier\n",
         "true_acc = correlation_classifier(rep1_data)"
       ],
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -320,7 +346,7 @@
       "source": [
         "print(true_acc)"
       ],
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -339,6 +365,142 @@
       "source": [
         "This means that for all subjects, the 8B matrix was best correlated with the 8B matrix of average other subjects. It is interesting that 1B is the next most accurate, and Intact and 2B are the worst. We can also see (from the previous cell's output) that the classifier was accurate for all conditions with s123, but not the other subjects. Looking at previously calculated ISC values (in the temporal ISC folder from the spring, `all_ROIs_AM/values.xlsx`), s123's ISC values aren't noticeably higher than the other subjects' values in A1."
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "FZaZP-OuzCsE"
+      },
+      "source": [
+        "## Correlation classifier analysis\n",
+        "Original, PCA, SRM"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TMoY7RdXzPkD"
+      },
+      "source": [
+        "# choose the ROI and subjects, set the filepath\n",
+        "roi = 'A1'\n",
+        "filepath = 'drive/MyDrive/fMRI_music_data/%s_by_subject_sorted_conds/'%roi\n",
+        "subjects = ['03','15','20','23']\n",
+        "\n",
+        "# set the k-values to use in PCA and SRM\n",
+        "k = [10,50,100]"
+      ],
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rAi5E-RRzXRv",
+        "outputId": "dfb4da23-9422-465a-f37f-40c03891c70b"
+      },
+      "source": [
+        "# load in the data from all subjects, normalize by subject\n",
+        "data = []\n",
+        "for subj in subjects: \n",
+        "  this_data = np.load(filepath+'%s_sub-1%s.npy'%(roi,subj))\n",
+        "  # normalization step\n",
+        "  this_data_norm = StandardScaler().fit_transform(this_data.T)\n",
+        "  data.append(this_data_norm.T)\n",
+        "\n",
+        "# recast the list into an array and check the shape\n",
+        "data = np.asarray(data)\n",
+        "print(data.shape)"
+      ],
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(4, 516, 1776)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_oKYLwxizjlZ",
+        "outputId": "f59e225b-96ae-4548-c871-190be49b25f0"
+      },
+      "source": [
+        "n_sub = len(subjects)\n",
+        "n_voxels = data.shape[1]\n",
+        "n_TRs = 148\n",
+        "n_conds = 4\n",
+        "n_runs = 3\n",
+        "\n",
+        "# reshape the data into conditions and runs\n",
+        "orig_data = np.copy(data)\n",
+        "orig_data = np.reshape(orig_data,(n_sub,n_voxels,n_TRs,n_conds,n_runs),order='F')\n",
+        "print(orig_data.shape)\n",
+        "\n",
+        "# take only the rep 1 data for this analysis\n",
+        "rep1_data = orig_data[:,:,:,:,0]\n",
+        "print(rep1_data.shape)"
+      ],
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(4, 516, 148, 4, 3)\n",
+            "(4, 516, 148, 4)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lNdQcBfkvHuP",
+        "outputId": "d95da370-2674-46bc-e751-1b5609eb62b5"
+      },
+      "source": [
+        "# run the rep 1 data through the classifier\n",
+        "true_acc = correlation_classifier(rep1_data)\n",
+        "print(true_acc)"
+      ],
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0.75 1.   0.25 0.75]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZtMQ-8aCvU_o"
+      },
+      "source": [
+        "# for each k-value, perform PCA \n",
+        "# then run the feature x time matrix through the classifier\n",
+        "for features in k:\n",
+        "  pca = PCA(n_components=features)"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
