--- a/ryc_correlation_classifier_092521.ipynb
+++ b/ryc_correlation_classifier_092521.ipynb
@@ -66,7 +66,7 @@
       },
       "source": [
         "def correlation_classifier(data):\n",
-        "  # data is in shape subjects x voxels x time x condition\n",
+        "  # data is in shape subjects x voxels/features x time x condition\n",
         "  no_subj = data.shape[0]\n",
         "  no_cond = data.shape[3]\n",
         "\n",
@@ -385,10 +385,7 @@
         "# choose the ROI and subjects, set the filepath\n",
         "roi = 'A1'\n",
         "filepath = 'drive/MyDrive/fMRI_music_data/%s_by_subject_sorted_conds/'%roi\n",
-        "subjects = ['03','15','20','23']\n",
-        "\n",
-        "# set the k-values to use in PCA and SRM\n",
-        "k = [10,50,100]"
+        "subjects = ['03','15','20','23']"
       ],
       "execution_count": 11,
       "outputs": []
@@ -473,7 +470,7 @@
         "outputId": "d95da370-2674-46bc-e751-1b5609eb62b5"
       },
       "source": [
-        "# run the rep 1 data through the classifier\n",
+        "# run the original rep 1 data through the classifier\n",
         "true_acc = correlation_classifier(rep1_data)\n",
         "print(true_acc)"
       ],
@@ -491,16 +488,157 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ZtMQ-8aCvU_o"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Lm_vEs-_6oyc",
+        "outputId": "19613f7a-a93b-4981-8a31-cf1334f82f2e"
       },
       "source": [
-        "# for each k-value, perform PCA \n",
-        "# then run the feature x time matrix through the classifier\n",
-        "for features in k:\n",
-        "  pca = PCA(n_components=features)"
+        "# reshape the run 1 data into list of voxels x all TRs\n",
+        "# probably could incorporate this into data loading step to streamline\n",
+        "data_for_dim_red = []\n",
+        "for s in range(len(subjects)):\n",
+        "  data_for_dim_red.append(np.reshape(rep1_data[0,:,:,:],(rep1_data.shape[1],-1),order='F'))\n",
+        "print(len(data_for_dim_red))\n",
+        "print(data_for_dim_red[0].shape)"
+      ],
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4\n",
+            "(516, 592)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "nl5PD8lp8Duh"
+      },
+      "source": [
+        "SRM takes a list of 2D arrays, where each list is a different subjects' voxels x TRs. PCA takes a 2D array of `n_samples` (TRs) x `n_features` (voxels)."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "G2mTnqmw-Klk"
+      },
+      "source": [
+        "accuracy = []"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1lnhhGIy8bnr"
+      },
+      "source": [
+        "# set the k-values to use in PCA and SRM\n",
+        "k = [10,50,100]"
+      ],
+      "execution_count": 56,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZtMQ-8aCvU_o",
+        "outputId": "f0537ef9-c6bb-4073-ea09-06a2b715a5f0"
+      },
+      "source": [
+        "# for each k-value, perform PCA on each subject separately\n",
+        "# then run the feature x time matrix through the classifier\n",
+        "\n",
+        "for features in k:\n",
+        "  this_transformed = []\n",
+        "  for s in range(len(subjects)):\n",
+        "    pca = PCA(n_components=features)\n",
+        "    this_PCs = pca.fit_transform(data_for_dim_red[s].T)\n",
+        "    this_transformed.append(this_PCs.T)\n",
+        "\n",
+        "  # once all subjects' data have been transformed\n",
+        "  # reshape into array of shape subjects x features x time x condition\n",
+        "  this_transformed = np.asarray(this_transformed)\n",
+        "  this_by_cond = np.reshape(this_transformed,(n_sub,features,n_TRs,n_conds),order='F')\n",
+        "\n",
+        "  # run this transformed data through the correlation classifier\n",
+        "  this_acc = correlation_classifier(this_by_cond)\n",
+        "  print('k = %d'%features, this_acc)\n",
+        "\n",
+        "  # append the results to the accuracy list"
+      ],
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "k = 10 [1. 1. 1. 1.]\n",
+            "k = 50 [1. 1. 1. 1.]\n",
+            "k = 100 [1. 1. 1. 1.]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CGr1Mdpx81fV",
+        "outputId": "cee19ccf-3881-496d-fd41-84ebc0064876"
+      },
+      "source": [
+        "# try the same with SRM\n",
+        "n_iter = 20\n",
+        "\n",
+        "for features in k:\n",
+        "  srm = SRM(n_iter=n_iter,features=features)\n",
+        "  srm.fit(data_for_dim_red)\n",
+        "  shared = srm.transform(data_for_dim_red)\n",
+        "  \n",
+        "  # once all subjects' data have been transformed\n",
+        "  # reshape into array of shape subjects x features x time x condition\n",
+        "  shared = np.asarray(shared)\n",
+        "  shared_by_cond = np.reshape(shared,(n_sub,features,n_TRs,n_conds),order='F')\n",
+        "\n",
+        "  # run this transformed data through the correlation classifier\n",
+        "  shared_acc = correlation_classifier(this_by_cond)\n",
+        "  print('k = %d'%features, shared_acc)"
+      ],
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "k = 10 [1. 1. 1. 1.]\n",
+            "k = 50 [1. 1. 1. 1.]\n",
+            "k = 100 [1. 1. 1. 1.]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qS_BQIZMAm26"
+      },
+      "source": [
+        "There's either a bug somewhere or we're just seeing a ceiling effect."
+      ]
     }
   ]
 }
